--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ document.write("\" color=\"0\">");
 <h1 class="STYLE17"><a name="biograph" id="biograph"></a>BIOGRAPHY</h1>
 
 <ul> <blockquote class="STYLE5"> <p class="STYLE16">
-Yue Gao is currently an associate professor in School of Software and TNList, Tsinghua University, Beijing, China. He received his B.E. degree in Department of Electronic Information Engineering, Harbin Institute of Technology, his Master Degree and his Ph.D. degree in School of Software and Department of Automation of Tsinghua University, respectively. He has been working in School of Computing, National University of Singapore and School of Medicine, University of North Carolina at Chapel Hill from 2012 to 2016. He is the recipient of the 1000 Youth Talent Plan Grant of China.
+Yue Gao is currently an associate professor in School of Software, Tsinghua University, Beijing, China. He received his B.E. degree in Department of Electronic Information Engineering, Harbin Institute of Technology, his Master Degree and his Ph.D. degree in School of Software and Department of Automation of Tsinghua University, respectively. He has been working in School of Computing, National University of Singapore and School of Medicine, University of North Carolina at Chapel Hill from 2012 to 2016. He is the recipient of the 1000 Youth Talent Plan Grant of China.
 <br> <br> 
-His research falls in the field of image analysis and computer vision, medical image analysis, machine learning and its applications on embeded systems. His recent research work contains visual search, machine learning and applications, computer-aided diagnosis, and network scheduling. He has published 90+ papers in premier journals and conferences like TIP, TMI, TMM, TCSVT, TNNLS, TOMM, TGRS, TIE, Human Brain Mapping, MICCAI, CVPR, IJCAI, AAAI, ECCV and ACM Multimedia.
+His research falls in the field of computer vision, medical image analysis, machine learning and its applications. His recent research work contains 3D vision, visual search, machine learning and applications, computer-aided diagnosis, and network scheduling. He has published 90+ papers in premier journals and conferences like TIP, TMI, TMM, TCSVT, TNNLS, TOMM, TGRS, TIE, Human Brain Mapping, MICCAI, CVPR, IJCAI, AAAI, ECCV and ACM Multimedia.
 <br> <br> 
 He also serves as Associate Editor for <i>Journal of Visual Communication and Image Representation</i> and <i>Neurocomputing</i>, program/special session/session chairs for ICIMCS 2016, ACM ICMR 2014, PCM 2015, IEEE VCIP 2014, etc., TPC members for AAAI 2017-2018, IJCAI 2016-2017, ACL 2015, MICCAI 2015-2016, etc. He is a Senior Member of IEEE and a Member of ACM.
 </blockquote></ul>
@@ -153,28 +153,33 @@ He also serves as Associate Editor for <i>Journal of Visual Communication and Im
 
 
 <ul> <blockquote class="STYLE5"> <p class="STYLE16">
-  <li class="STYLE17"><strong>Image Analysis and Computer Vision</strong></li>
+  <li class="STYLE17"><strong>Computer Vision and Image Analysis</strong></li>
 </blockquote></ul>
 
 <ol class="STYLE5">
-     <li class="STYLE7"><strong class="STYLE18">[TC]</strong> Yi Zhen, <strong>Yue Gao</strong>, Dit-Yan Yeung, Hongyuan Zha, Xuelong Li, "Spectral Multimodal Hashing and Its Application to Multimedia Retrieval&quot;, <u>IEEE Transactions on Cybernetics</u>, 2016.</li>  
+ <li class="STYLE7"><strong class="STYLE18">[TC]</strong> Minjie Cai, Feng Lu,  <strong>Yue Gao</strong>, "Desktop Action Recognition from First-Person Point-of-View&quot;, <u>IEEE Transactions on Cybernetics</u>, 2018.</li>  
+ <li class="STYLE7"><strong class="STYLE18">[TC]</strong> Sicheng Zhao,  <strong>Yue Gao</strong>, Guiguang Ding, Tat-Seng Chua, "Real-Time Multimedia Social Event Detection in Microblog&quot;, <u>IEEE Transactions on Cybernetics</u>, 2017.</li>  
+ <li class="STYLE7"><strong class="STYLE18">[TC]</strong> Yi Zhen, <strong>Yue Gao</strong>, Dit-Yan Yeung, Hongyuan Zha, Xuelong Li, "Spectral Multimodal Hashing and Its Application to Multimedia Retrieval&quot;, <u>IEEE Transactions on Cybernetics</u>, 2016.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> An-An Liu, Wei-Zhi Nie, <strong>Yue Gao</strong>, Yuting Su, "Multi-Modal Clique-Graph Matching for View-Based 3D Model Retrieval&quot;, <u>IEEE Transactions on Image Processing</u>, 2016.</li> 
-    <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> Feng Lu, <strong>Yue Gao</strong>, Xiaowu Chen, "Synthetic Iris Appearance Fitting (SIAF) for Computing 3D Human Gaze Directions from Unlabeled Eye Images&quot;, <u>IEEE Transactions on Multimedia</u>, 2016.</li>  
+ <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> Feng Lu, <strong>Yue Gao</strong>, Xiaowu Chen, "Synthetic Iris Appearance Fitting (SIAF) for Computing 3D Human Gaze Directions from Unlabeled Eye Images&quot;, <u>IEEE Transactions on Multimedia</u>, 2016.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> Haiyun Guo, Jinqiao Wang, <strong>Yue Gao</strong>, Hanqing Lu, "Multi-View 3D Object Retrieval with Deep Embedding Network, <u>IEEE Transactions on Image Processing</u>, 2016.</li> 
- 
-  <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> Guiguang Ding, Yuchen Guo, Jile Zhou,  <strong>Yue Gao</strong>, "Large-scale Cross-modality Search via Collective Matrix Factorization Hashing, <u>IEEE Transactions on Image Processing</u>, 2016.</li> 
- 
-	<li class="STYLE7"><strong class="STYLE18">[TIST]</strong> <strong>Yue Gao</strong>, You Yang, Yi Zhen, Qionghai Dai, "Depth Error Elimination For RGB-D Cameras&quot;, <u>ACM Transactions on Intelligent System and Technology</u>, 2015.</li>  
+ <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> Guiguang Ding, Yuchen Guo, Jile Zhou,  <strong>Yue Gao</strong>, "Large-scale Cross-modality Search via Collective Matrix Factorization Hashing, <u>IEEE Transactions on Image Processing</u>, 2016.</li> 
+ <li class="STYLE7"><strong class="STYLE18">[TIST]</strong> <strong>Yue Gao</strong>, You Yang, Yi Zhen, Qionghai Dai, "Depth Error Elimination For RGB-D Cameras&quot;, <u>ACM Transactions on Intelligent System and Technology</u>, 2015.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TIE]</strong> <strong>Yue Gao</strong>, Meng Wang, Rongrong Ji, Xindong Wu, Qionghai Dai, "3D Object Retrieval with Hausdorff Distance Learning&quot;, <u>IEEE Transactions on Industrial Electronics</u>, 2014.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> <strong>Yue Gao</strong>, Qionghai Dai, "View-based 3-D Object Retrieval: Challenges and Approaches&quot;, <u>IEEE Multimedia Magazine</u>, 2014.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> <strong>Yue Gao</strong>, Rongrong Ji, Wei Liu, Qionghai Dai, Gang Hua, "Weakly Supervised Visual Dictionary Learning by Harnessing Image Attributes&quot;, <u>IEEE Transactions on Image Processing</u>, 2014.</li> 
  <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> Yang Yang, Zhengjun Zha, <strong>Yue Gao</strong>, Xiaofeng Zhu, Tat-Seng Chua, "Exploiting Web Images for Semantic Video Indexing via Robust Sample-specific Loss&quot;, <u>IEEE Transactions on Multimedia</u>, 2014.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TOMM]</strong> Hanwang Zhang, Zhengjun Zha, Yang Yang, Shuicheng Yan, <strong>Yue Gao</strong>, Tat-Seng Chua, "Attribute-Augmented Semantic Hierarchy: Towards a Unified Framework for Content-Based Image Retrieval&quot;, <u>ACM Transactions on Multimedia Computing, Communications, and Applications</u>, 2014.</li>
-  <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> <strong>Yue Gao</strong>, Meng Wang, Zhengjun Zha, Jialie Shen, Xuelong Li, Xindong Wu, "Visual-Textual Joint Relevance Learning for Tag-Based Social Image Search&quot;, <u>IEEE Transactions on Image Processing</u>, 2013.</li> 
+ <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> <strong>Yue Gao</strong>, Meng Wang, Zhengjun Zha, Jialie Shen, Xuelong Li, Xindong Wu, "Visual-Textual Joint Relevance Learning for Tag-Based Social Image Search&quot;, <u>IEEE Transactions on Image Processing</u>, 2013.</li> 
  <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> <strong>Yue Gao</strong>, Meng Wang, Dacheng Tao, Rongrong Ji, Qionghai Dai, "3D Object Retrieval and Recognition with Hypergraph Analysis&quot;, <u>IEEE Transactions on Image Processing</u>, 2012.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> <strong>Yue Gao</strong>, Jinhui Tang, Richang Hong, Shuicheng Yan, Qionghai Dai, Naiyao Zhang, Tat-Seng Chua, "Camera Constraint-Free View-Based 3D Object Retrieval&quot;, <u>IEEE Transactions on Image Processing</u>, 2012.</li> 
  <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> <strong>Yue Gao</strong>, Meng Wang, Zhengjun Zha, Qi Tian, Qionghai Dai, Naiyao Zhang, "Less is More: Efficient 3D Object Retrieval with Query View Selection&quot;, <u>IEEE Transactions on Multimedia</u>, 2011.</li>  
- <li class="STYLE7"><strong class="STYLE18">[PR]</strong> <strong>Yue Gao</strong>, Qionghai Dai, Naiyao Zhang, "3D Model Comparison using Spatial Structure Circular Descriptor&quot;, <u>Pattern Recognition</u>, 2010.</li> 
+ <li class="STYLE7"><strong class="STYLE18">[PR]</strong> <strong>Yue Gao</strong>, Qionghai Dai, Naiyao Zhang, "3D Model Comparison using Spatial Structure Circular Descriptor&quot;, <u>Pattern Recognition</u>, 2010.</li>  
+ <li class="STYLE7"><strong class="STYLE38">[CVPR]</strong> Yifan Feng, Zizhao Zhang, Xibin Zhao, Rongrong Ji,  <strong>Yue Gao</strong>, "GVCNN: Group-View Convolutional Neural Networks for 3D Shape Recognition", <u>IEEE Conference on Computer Vision and Pattern Recognition</u>, 2018.</li>
+ <li class="STYLE7"><strong class="STYLE38">[IJCAI]</strong> Shengchuan Zhang, Rongrong Ji, Jie Hu,  <strong>Yue Gao</strong>, Chia-Wen Lin, "Robust Face Sketch Synthesis via Generative Adversarial Fusion of Priors and Parametric Sigmoid", <u>International Joint Conference on Artificial Intelligence</u>, 2018.</li>
+ <li class="STYLE7"><strong class="STYLE38">[IJCAI]</strong> Sicheng Zhao, Guiguang Ding, Jungong Han,  <strong>Yue Gao</strong>, "Personality-Aware Personalized Emotion Recognition from Physiological Signals", <u>International Joint Conference on Artificial Intelligence</u>, 2018.</li>
+ <li class="STYLE7"><strong class="STYLE38">[IV]</strong> Guanglin Xu, Shaoyi Du, Dixiao Cui, Sirui Zhang, Xuetao Zhang, Jianru Xue, <strong>Yue Gao</strong>, "Precise Point Set Registration Using Point-to-Plane Distance and Correntropy for Lidar Based Localization", <u>IEEE Intelligent Vehicles Symposium</u>, 2018.</li>
+ <li class="STYLE7"><strong class="STYLE38">[MM]</strong> Sicheng Zhao, Guiguang Ding,  <strong>Yue Gao</strong>, Jungong Han, "Learning Visual Emotion Distributions via Multi-Modal Features Fusion&quot;, <u>ACM Conference on Multimedia</u>, 2017.</li>
  <li class="STYLE7"><strong class="STYLE38">[IJCAI]</strong> Lifan Su,  <strong>Yue Gao</strong>, Xibin Zhao, Hai Wan, Ming Gu, Jiaguang Sun, "Vertex-Weighted Hypergraph Learning for Multi-View 3D Object Classification", <u>International Joint Conference on Artificial Intelligence</u>, 2017.</li>
  <li class="STYLE7"><strong class="STYLE38">[IJCAI]</strong> Xin Zhao, Guiguang Ding, Yuchen Guo, Jungong Han,  <strong>Yue Gao</strong>, "TUCH: Turning Cross-view Hashing into Single-view Hashing via Generative Adversarial Nets", <u>International Joint Conference on Artificial Intelligence</u>, 2017.</li>
  <li class="STYLE7"><strong class="STYLE38">[IJCAI]</strong> Yuchen Guo, Guiguang Ding, Jungong Han, <strong>Yue Gao</strong>, "SitNet: Discrete Similarity Transfer Network for Zero-shot Hashing", <u>International Joint Conference on Artificial Intelligence</u>, 2017.</li>
@@ -182,11 +187,6 @@ He also serves as Associate Editor for <i>Journal of Visual Communication and Im
  <li class="STYLE7"><strong class="STYLE38">[MM]</strong> Hanwang Zhang, Zhengjun Zha, Yang Yang, Shuicheng Yan, <strong>Yue Gao</strong>, Tat-Seng Chua, "Attributes-augmented Semantic Hierarchy for Image Retrieval&quot;, <u>ACM Conference on Multimedia</u>, 2013. [<font color="red"><b>Best Student Paper</b></font>] </li>
  <li class="STYLE7"><strong class="STYLE38">[CVPR]</strong> Liujuan Cao, Rongrong Ji,  <strong>Yue Gao</strong>, Yi Yang, Qi Tian, "Attributes-augmented Semantic Hierarchy for Image Retrieval&quot;, <u>IEEE Conference on Computer Vision and Pattern Recognition</u>, 2012.</li>
  <li class="STYLE7"><strong class="STYLE38">[MM]</strong> Hanwang Zhang, Zheng-Jun Zha, Jingwen Bian, <strong>Yue Gao</strong>, Huanbo Luan, Tat-Seng Chua, "Attributes-augmented Semantic Hierarchy for Image Retrieval&quot;, <u>ACM Conference on Multimedia</u>, 2012. [<font color="red"><b>Best Demo Runner-Up</b></font>]</li>
-
- 
- 
- 
- 
  
  </ol>
 
@@ -208,6 +208,12 @@ He also serves as Associate Editor for <i>Journal of Visual Communication and Im
   <li class="STYLE7"><strong class="STYLE18">[TCSVT]</strong> <strong>Yue Gao</strong>, Rongrong Ji, Longfei Zhang, Alexander Hauptmann, "Symbiotic Tracker Ensemble Towards A Unified Tracking Framework&quot;, <u>IEEE Transactions on Circuits and Systems for Video Technology</u>, 2014.</li>      
  <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> Liqiang Nie, Meng Wang, <strong>Yue Gao</strong>, Zhengjun Zha, Tat-Seng Chua, "Beyond Text QA: Multimedia Answer Generation by Harvesting Web Information&quot;, <u>IEEE Transactions on Multimedia</u>, 2013.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TOMM]</strong> Rongrong Ji, <strong>Yue Gao</strong>, Bineng Zhong, Hongxun Yao, Qi Tian, "Mining Flickr Landmarks by Modeling Reconstruction Sparsity&quot;, <u>ACM Transactions on Multimedia Computing, Communications, and Applications</u>, 2011.</li>
+
+ <li class="STYLE7"><strong class="STYLE38">[IJCAI]</strong> Zizhao Zhang, Haojie Lin, <strong>Yue Gao</strong>, "Dynamic Hypergraph Structure Learning", <u>International Joint Conference on Artificial Intelligence</u>, 2018.</li>
+ <li class="STYLE7"><strong class="STYLE38">[IJCAI]</strong> Nan Wang, Xibin Zhao, Yu Jiang,  <strong>Yue Gao</strong>, "Iterative Metric Learning for Imbalance Data Classification", <u>International Joint Conference on Artificial Intelligence</u>, 2018.</li>
+ <li class="STYLE7"><strong class="STYLE38">[AAAI]</strong> Zizhao Zhang, Yubo Zhang, Xibin Zhao, <strong>Yue Gao</strong>, "EMD Metric Learning", <u>AAAI Conference on Artificial Intelligence</u>, 2018.</li>
+<li class="STYLE7"><strong class="STYLE38">[AAAI]</strong> Xibin Zhao, Nan Wang, Heyuan Shi, Hai Wan, Jin Huang, <strong>Yue Gao</strong>, "Hypergraph Learning with Cost Inteval Optimization", <u>AAAI Conference on Artificial Intelligence</u>, 2018.</li>
+<li class="STYLE7"><strong class="STYLE38">[AAAI]</strong> Jin Huang, <strong>Yue Gao</strong>, Sha Lu, Xibin Zhao, Yangdong Deng, Ming Gu, "Energy-Efficient Automatic Train Drivng by Learning Driving Patterns", <u>AAAI Conference on Artificial Intelligence</u>, 2018.</li>
  <li class="STYLE7"><strong class="STYLE38">[IJCAI]</strong> Sicheng Zhao, Guiguang Ding, <strong>Yue Gao</strong>, Jungong Han, "Approximating Discrete Probability Distribution of Image Emotions by Multi-Modal Features Fusion", <u>International Joint Conference on Artificial Intelligence</u>, 2017.</li>
  <li class="STYLE7"><strong class="STYLE38">[IJCAI]</strong> Yuchen Guo, Guiguang Ding, Jungong Han, <strong>Yue Gao</strong>, "Synthesizing Samples for Zero-shot Learning", <u>International Joint Conference on Artificial Intelligence</u>, 2017.</li> 
  <li class="STYLE7"><strong class="STYLE38">[AAAI]</strong> Yuchen Guo, Guiguang Ding, <strong>Yue Gao</strong>, Jungong Han, "Active Learning with Cross-class Similarity Transfer", <u>AAAI Conference on Artificial Intelligence</u>, 2017.</li>
@@ -228,10 +234,11 @@ He also serves as Associate Editor for <i>Journal of Visual Communication and Im
 </blockquote></ul>
 
 <ol class="STYLE5">
+  <li class="STYLE7"><strong class="STYLE18">[JBHI]</strong> Minggxia Liu,  <strong>Yue Gao</strong>, Pew-Thian Yap, Dinggang Shen, "Multi-Hypergraph Learning for Incomplete Multi-Modality Data", <u>IEEE Journal of Biomedical and Health Informatics</u>, 2017.</li>  
   <li class="STYLE7"><strong class="STYLE18">[HBM]</strong> Xiaobo Chen, Han Zhang, <strong>Yue Gao</strong>, Chong-Yaw Wee, Gang Li, Dinggang Shen, "High-Order Resting-State Functional Connectivity Network for MCI Classification", <u>Human Brain Mapping</u>, 2016.</li>  
   <li class="STYLE7"><strong class="STYLE18">[TMI]</strong> Jun Zhang, <strong>Yue Gao</strong>, Yaozong Gao, Brent Mussell, and Dinggang Shen, "Detecting Anatomical Landmarks for Fast Alzheimer's Disease Diagnosis", <u>IEEE Transactions on Medical Imaging</u>, 2016.</li>  
   <li class="STYLE7"><strong class="STYLE38">[MICCAI]</strong> Brent C. Munsell, Guorong Wu, <strong>Yue Gao</strong>, Nicholas Desisto, Martin Styner, "Identifying Relationships in Functional and Structural Connectome Data using a Hypergraph Learning Method", <u>International Conference on Medical Image Computing and Computer Assisted Intervention</u>, 2016.</li>  
-	<li class="STYLE7"><strong class="STYLE38">[MICCAI]</strong> <strong>Yue Gao</strong>, Ehsan Adeli-M., Minjeong Kim, Panteleimon Giannakopoulos, Sven Haller, and Dinggang Shen, "Medical Image Retrieval using Multi-Graph Learning for MCI Diagnostic Assistance", <u>International Confer-ence on Medical Image Computing and Computer Assisted Intervention</u>, 2015.</li>
+  <li class="STYLE7"><strong class="STYLE38">[MICCAI]</strong> <strong>Yue Gao</strong>, Ehsan Adeli-M., Minjeong Kim, Panteleimon Giannakopoulos, Sven Haller, and Dinggang Shen, "Medical Image Retrieval using Multi-Graph Learning for MCI Diagnostic Assistance", <u>International Confer-ence on Medical Image Computing and Computer Assisted Intervention</u>, 2015.</li>
   <li class="STYLE7"><strong class="STYLE38">[MICCAI]</strong> <strong>Yue Gao</strong>, Chong-Yaw Wee, Minjeong Kim, Panteleimon Giannakopoulos, Marie-Louise Montandon, Sven Haller, and Dinggang Shen, "MCI Identification by Joint Learning on Multiple MRI Data", <u>International Conference on Medical Image Computing and Computer Assisted Intervention</u>, 2015.</li>  
 
 </ol>
@@ -241,6 +248,7 @@ He also serves as Associate Editor for <i>Journal of Visual Communication and Im
   <li class="STYLE17"><strong>Network Scheduling</strong></li>
 </blockquote></ul>
 <ol class="STYLE5">
+<li class="STYLE7"><strong class="STYLE38">[TIE]</strong>Lifan Su, Hai Wan, Yufang Qin, Xibin Zhao, <strong>Yue Gao</strong>, Xiaoyu Song, Chenyang Lu, Ming Gu, "Synthesizing Fault-tolerant Schedule for Time-triggered Network without Hot-backup", <u>IEEE Transactions on Industrial Electronics</u>, 2018.</li>
 <li class="STYLE7"><strong class="STYLE38">[IWQOS]</strong>Qinghan Yu, Xibin Zhao, Hai Wan,  <strong>Yue Gao</strong>, Chenyang Lu, Ming Gu, "Traffic Shaping for Scheduling Uncertainties in Time-Triggered Train Networks", <u>IEEE 25th International Symposium on Quality of Service</u>, 2017.</li>
 </ol>
 
