--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@ He also serves as Associate Editor for <i>Journal of Visual Communication and Im
 </blockquote></ul>
 
 <ol class="STYLE5">
+  <li class="STYLE7"><strong class="STYLE18">[TOMM]</strong> Sicheng Zhao, Amir Gholami, Guiguang Ding, <strong>Yue Gao</strong>, Jungong Han, Kurt Keutzer, "Personalized Emotion Recognition by Personality-aware High-order Learning of Physiological Signals&quot;, <u>ACM Transactions on Multimedia Computing, Communications and Applications</u>, 2018.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TC]</strong> Minjie Cai, Feng Lu,  <strong>Yue Gao</strong>, "Desktop Action Recognition from First-Person Point-of-View&quot;, <u>IEEE Transactions on Cybernetics</u>, 2018.</li>  
- <li class="STYLE7"><strong class="STYLE18">[TC]</strong> Sicheng Zhao,  <strong>Yue Gao</strong>, Guiguang Ding, Tat-Seng Chua, "Real-Time Multimedia Social Event Detection in Microblog&quot;, <u>IEEE Transactions on Cybernetics</u>, 2017.</li>  
+ <li class="STYLE7"><strong class="STYLE18">[TC]</strong> Sicheng Zhao,  <strong>Yue Gao</strong>, Guiguang Ding, Tat-Seng Chua, "Real-Time Multimedia Social Event Detection in Microblog&quot;, <u>IEEE Transactions on Cybernetics</u>, 2018.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TC]</strong> Yi Zhen, <strong>Yue Gao</strong>, Dit-Yan Yeung, Hongyuan Zha, Xuelong Li, "Spectral Multimodal Hashing and Its Application to Multimedia Retrieval&quot;, <u>IEEE Transactions on Cybernetics</u>, 2016.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> An-An Liu, Wei-Zhi Nie, <strong>Yue Gao</strong>, Yuting Su, "Multi-Modal Clique-Graph Matching for View-Based 3D Model Retrieval&quot;, <u>IEEE Transactions on Image Processing</u>, 2016.</li> 
  <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> Feng Lu, <strong>Yue Gao</strong>, Xiaowu Chen, "Synthetic Iris Appearance Fitting (SIAF) for Computing 3D Human Gaze Directions from Unlabeled Eye Images&quot;, <u>IEEE Transactions on Multimedia</u>, 2016.</li>  
@@ -194,8 +195,8 @@ He also serves as Associate Editor for <i>Journal of Visual Communication and Im
   <li class="STYLE17"><strong>Machine Learning and Applications</strong></li>
 </blockquote></ul>
 <ol class="STYLE5">
-  <li class="STYLE7"><strong class="STYLE18">[TNNLS]</strong> Xibin Zhao, Nan Wang, Yubo Zhang, Shaoyi Du,  <strong>Yue Gao</strong>, Jiaguang Sun, "Beyond Pairwise Matching: Person Re-identification by High-Order Correlation Exploration&quot;, <u>IEEE Transactions on Neural Networks and Learning Systems</u>, 2017.</li>  
-  <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> Fuhai Chen, Rongrong Ji, Jinsong Su, Donglin Cao, <strong>Yue Gao</strong>, "Predicting Microblog Sentiments via Weakly Supervised Multi-Modal Deep Learning&quot;, <u>IEEE Transactions on Multimedia</u>, 2017.</li>  
+  <li class="STYLE7"><strong class="STYLE18">[TNNLS]</strong> Xibin Zhao, Nan Wang, Yubo Zhang, Shaoyi Du,  <strong>Yue Gao</strong>, Jiaguang Sun, "Beyond Pairwise Matching: Person Re-identification by High-Order Correlation Exploration&quot;, <u>IEEE Transactions on Neural Networks and Learning Systems</u>, 2018.</li>  
+  <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> Fuhai Chen, Rongrong Ji, Jinsong Su, Donglin Cao, <strong>Yue Gao</strong>, "Predicting Microblog Sentiments via Weakly Supervised Multi-Modal Deep Learning&quot;, <u>IEEE Transactions on Multimedia</u>, 2018.</li>  
  <li class="STYLE7"><strong class="STYLE18">[TIP]</strong> Yuchen Guo, Guiguang Ding, Jungong Han, <strong>Yue Gao</strong>, "Zero-shot Learning with Transferred Samples&quot;, <u>IEEE Transactions on Image Processing</u>, 2017.</li>  
 <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> <strong>Yue Gao</strong>, Hanwang Zhang, Xibin Zhao, and Shuicheng Yan, "Event Classification in Microblog via Social Tracking&quot;, <u>ACM Transactions on Intelligent Systems and Technology,</u>, 2017.</li>
   <li class="STYLE7"><strong class="STYLE18">[TMM]</strong> Sicheng Zhao, Hongxun Yao, <strong>Yue Gao</strong>, Xiaolei Jiang, Rongrong Ji, Guiguang Ding,  "Continuous Probability Distribution Prediction of Image Emotions via Multi-Task Shared Sparse Regression&quot;, <u>IEEE Transactions on Multimedia</u>, 2017.</li>  
@@ -224,16 +225,14 @@ He also serves as Associate Editor for <i>Journal of Visual Communication and Im
  <li class="STYLE7"><strong class="STYLE38">[MM]</strong> Sicheng Zhao, <strong>Yue Gao</strong>, Xiaolei Jiang, Hongxun Yao, Tat-Seng Chua, Xiaoshui Sun, "Exploring Principles-of-Art Features For Image Emotion Recognition", <u>ACM International Conference on Multimedia</u>, 2014. </li>
  <li class="STYLE7"><strong class="STYLE38">[ICMR]</strong>  <strong>Yue Gao</strong>, Fanglin Wang, Huabo Luan, Tat-Seng Chua, "Brand Data Gathering From Live Social Media Streams&quot;, <u>ACM Conference on Multimedia Retrieval</u>, 2014. [<font color="red"><b><a href="http://www.nextcenter.org/Brand-Social-Net/">Data and Website</a></b></font>]</li>
   </ol>
-
-
- 
-  
   
 <ul> <blockquote class="STYLE5"> <p class="STYLE16">
   <li class="STYLE17"><strong>Computer-Aided Diagnosis</strong></li>
 </blockquote></ul>
 
 <ol class="STYLE5">
+  <li class="STYLE7"><strong class="STYLE18">[TMI]</strong> Jiayang Guo, Kun Yang, Hongyi Liu, Chunli Yin, Jing Xiang, Hailong Li, Rongrong Ji, <strong>Yue Gao</strong>, "A Stacked Sparse Autoencoder-based Detector for Diagnosis of Neuromagnetic High Frequency Oscillations in Epi-lepsy", <u>IEEE Transactions on Medical Imaging</u>, 2018.</li>  
+  <li class="STYLE7"><strong class="STYLE18">[BIB]</strong> Chen Zu, <strong>Yue Gao</strong>, Brent Munsell, Minjeong Kim, Ziwen Peng, Jessica R. Cohen, Daoqiang Zhang, Guorong Wu, "Identifying disease-related subnetwork connectome biomarkers by sparse hypergraph learning", <u>Brain Imaging and Behavior</u>, 2018.</li>  
   <li class="STYLE7"><strong class="STYLE18">[JBHI]</strong> Minggxia Liu,  <strong>Yue Gao</strong>, Pew-Thian Yap, Dinggang Shen, "Multi-Hypergraph Learning for Incomplete Multi-Modality Data", <u>IEEE Journal of Biomedical and Health Informatics</u>, 2017.</li>  
   <li class="STYLE7"><strong class="STYLE18">[HBM]</strong> Xiaobo Chen, Han Zhang, <strong>Yue Gao</strong>, Chong-Yaw Wee, Gang Li, Dinggang Shen, "High-Order Resting-State Functional Connectivity Network for MCI Classification", <u>Human Brain Mapping</u>, 2016.</li>  
   <li class="STYLE7"><strong class="STYLE18">[TMI]</strong> Jun Zhang, <strong>Yue Gao</strong>, Yaozong Gao, Brent Mussell, and Dinggang Shen, "Detecting Anatomical Landmarks for Fast Alzheimer's Disease Diagnosis", <u>IEEE Transactions on Medical Imaging</u>, 2016.</li>  
@@ -296,15 +295,15 @@ He also serves as Associate Editor for <i>Journal of Visual Communication and Im
 <blockquote> 
 <ul>
 <p class="STYLE16">
-- AAAI Conference on Artificial Intelligence (AAAI 16-17)<br>
-- International Joint Conference on Artificial Intelligence (IJCAI 16-17)<br>
-- ACM Conference on Multimedia (MM 14-15) <br>
-- Pacific-Rim Conference on Multimedia (PCM 13-14) <br>
-- IEEE International Conference on Multimedia and Expo (ICME 12-15) <br>
+- AAAI Conference on Artificial Intelligence (AAAI 17-19)<br>
+- International Joint Conference on Artificial Intelligence (IJCAI 17-18)<br>
+- ACM Conference on Multimedia (MM 14-15,18) <br>
+- Pacific-Rim Conference on Multimedia (PCM 13-14,18) <br>
+- IEEE International Conference on Multimedia and Expo (ICME 12-15,18) <br>
 - International Conference on Multimedia Modeling (MMM 13-15) <br>
 - IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP 13-15) <br>
 - The Conference of the Association for Computational Linguistics (ACL 14-15) <br>
-- International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 15-16) <br>
+- International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI 15-16,18) <br>
 - etc.
 </p>
 </blockquote>
